--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
         "antd": "^5.21.3",
         "axios": "^1.7.7",
         "classnames": "^2.5.1",
+        "dayjs": "^1.11.13",
+        "immer": "^10.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "sass": "^1.79.4"
+        "sass": "^1.79.4",
+        "zustand": "^5.0.0-rc.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
